# reportertool

./: .gitattributes  .gitignore  README.md  pyproject.toml  开发提示.txt
codesamples/rsample/: 0_functions.R  1 high_data_cleaning.R  2 high_report_dist.R
docs/: 01_需求整理.md  02_设计方案.md  03_实施计划.md  04_流程固化收益评估.md  05_schema_关键决策.md  06_工程约束_中文编码与分段处理.md  2026-04-28_明日继续说明.md  review-log.md
docs/reviews/: 2026-04-27-claude-review-round1.md  2026-04-27-claude-review-round2.md  2026-04-28-claude-review-confirmation.md  2026-04-28-claude-review-final-ready.md  2026-04-28-claude-review-round1.md  2026-04-28-output-and-human-gates-claude-review.md  2026-04-28-visualization-plan-claude-confirmations.md  2026-04-28-visualization-plan-claude-review.md
src/data_cleaning/: README.md  __init__.py  title_parser.py
src/questionnaire/: PROJECT.md  README.md  __init__.py  auto_normalize.py  components.py  constants.py  docx_parse.py  manual_review.py  models.py  outputs.py  pipeline.py  semantic_review.py  text_normalize.py
src/reportertool/: __init__.py  chart_data.py  chart_registry.py  chart_renderer.py  cli.py  (+18 more)
tests/: conftest.py  test_chart_data.py  test_chart_registry.py  test_chart_renderer.py  test_chart_text.py  test_cli.py  test_cli_integration.py  test_input_detect.py  test_metadata.py  test_metrics.py  test_normalize.py  test_package_layout.py  test_preview_html.py  test_questionnaire_mapping.py  test_questionnaire_normalize.py  test_questionnaire_subjects.py  test_reconstruction.py  test_report_output.py  test_report_rules.py  test_title_parser.py  test_xlsx_reader.py
(+5 files in other folders)
