[project]
name = "reportertool"
version = "0.1.0"
description = "Questionnaire and report generation pipeline."
requires-python = ">=3.11"
dependencies = [
    "python-docx",
    "openpyxl",
]

[project.scripts]
reportertool = "reportertool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
